--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+     <meta name="description" content="crossaint website for giving more knowledge about crossaint>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hosting Croissant</title>
 </head>
