Update photo.html by adding description on picture's links

--- a/photo.html
+++ b/photo.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pictures of crossaints>
     <title>The Croissant</title>
 </head>
 <style>
@@ -16,9 +17,9 @@
 <body>
     <h1>Photo of a croissant</h1>
 
-    <img src="images/crossaint-1.jpeg" alt="" width="500px">
-    <img src="images/crossaint-2.jpeg" alt="" width="500px">
-    <img src="images/crossaint-3.jpeg" alt="" width="500px">
+    <img src="images/crossaint-1.jpeg" alt="a picture of a crossaint" width="500px">
+    <img src="images/crossaint-2.jpeg" alt="a picture of a crossaint" width="500px">
+    <img src="images/crossaint-3.jpeg" alt="a picture of a crossaint" width="500px">
 
 
     <br>
