--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
      <meta name="description" content="crossaint website for giving more knowledge about crossaint>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hosting Croissant</title>
+    <title>Croissant knowledge </title>
 </head>
 <style>
     body {
